--- a/inst.css
+++ b/inst.css
@@ -15,6 +15,7 @@ body{
 
 }
 .header{
+	position: fixed;              /*типа фиксированный, но блочащий нахер всю страницу заголовок*/
 	width: 100vw;
 	height: 77px;
 	background-color: #ffffff;
@@ -35,7 +36,7 @@ body{
 .header_fixed__input{
 	position: relative;
 }
-.header_fixed__input input{
+.header_fixed__input input{      /*форма инпута, текста и лупы внутри*/
 	height: 28px; 
 	width:215px;
 	font-size: 14px;
@@ -43,10 +44,19 @@ body{
 	outline: none;
 	background-image: url(images/loopa.png);
 	background-repeat: no-repeat;
-	background-position: 4% 50%;
+/*	background-position: 4% 50%;
+	text-align: left;  */
 	padding-left: 30px;
 }
-.input_image{
+.onfocus_input{                  /*Для установленного фокуса*/
+	background-position: 4% 50%;
+	text-align: left;
+}
+.onblur_input{                   /*Когда убираем фокус фокус*/
+	background-position: 40% 50%;
+	text-align: center;
+}
+.input_image{                    /*Положение крестика на краю инпута*/
 	position: absolute;
 	left: 220px;
 	filter: opacity(0.25);
