--- a/inst_small.css
+++ b/inst_small.css
@@ -117,22 +117,26 @@ body{
 }
 
 .container{					/*приступим к содержимому*/
-	padding: 140px 0px 0px 0px;
+	padding: 100px 0px 0px 0px;
 	font-size: 16px;
+
 }
 .container__head{			/*головная часть основы*/
 	display: flex;
-	padding-left: 40px;
+	padding-left: 20px;
 }
 .nat_logo_flex{
 	display: flex;
 	flex-grow: 1;
+	max-width: 77px;
 	margin-right: 30px;
 	justify-content: center;
 	align-items: flex-start;
 }
 .nat_logo_image{
 	float:left;
+	width: 77px;
+	height: 77px;
 }
 .circle_image{				/*скруглление картинок*/
 	border: 1px solid #e6e6e6;
@@ -145,16 +149,19 @@ body{
 	justify-content: space-between;
 	align-items: flex-start;
 	max-width: 888px;
-	height: 170px;	
-}
-.container__info_small{
-	height: 77px;
+	height: 77px;	
 }
 .inline{					/*не хотите записаться в стоку? тогда мы идём к вам!*/
 	display: inline-block;
 }
 .normal_weight{				/*нормальная толщина букв*/
 	font-weight: normal;
+	font-size: 22px;
+	margin-right: 10px;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+/*	flex-shrink: 1;
+	min-width: 0;	*/
 }
 .bold_weight{				/*жирные буквы*/
 	font-weight: bold;
@@ -163,14 +170,20 @@ body{
 }
 .info_top{
 	display: inline-flex;
-	width: 408px;
-	height: 40px;
-	justify-content: space-between;
+	max-width: 250px;
+	min-width: 157px;
+	height: 80px;
+	flex-wrap: wrap;
+	justify-content: flex-start;
 	align-items: center;
 }
 							/*кнопки из info_top*/
+.buttons{
+	order:1;
+}
 .follow{
-	width: 96px;
+	margin-right: 10px;
+	width: 198px;
 	height: 28px;
 	color:white;
 	font-size: 14px;
@@ -178,6 +191,12 @@ body{
 	background-color: #3897f0;
 	border:none;
 	border-radius: 3px;
+}
+.width{
+	width:96px;
+}
+.width1{
+	width:70px;
 }
 .triangle{
 	width: 34px;
@@ -198,51 +217,52 @@ body{
 	font-weight: bold;
 }
 							/*кнопки из info_top*/
-.info_links{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 360px;
-	height: 18px;
-}
-.info_description{
+.info_description_small{
 	display: flex;
 	flex-direction: column;
-	justify-content:center;
-	height: 72px;
+	justify-content: center;
+	font-size:14px; 
 	line-height: 1.5;
+	padding-top: 30px;
+	padding-left: 20px;
 }
 							/*строка с историями*/
 .histories{
 	display: flex;
 	flex-direction: row;
-	padding: 50px 0px 0px 40px;
+	padding: 20px 0px 0px 10px;
 }
 .history{
-	height: 76px;
-	width: 76px;
+	height: 56px;
+	width: 56px;
 }
 .history_block{
 	display: inline-flex;
 	flex-direction: column;
 	align-items: center;
-	height: 130px;
-	width: 130px;
-	font-size: 14px;
-	font-weight: bold;
+	height: 87px;
+	width: 75px;
+	font-size: 12px;
+	font-weight: normal;
 }
-
 							/*конец головной части основы*/
-.delitel_body{
-	margin: auto;
-	padding: 30px 20px 0px 20px;
-	max-width: 950px;
+.info_links_small{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100vw;
+	margin-top: 20px;
+	border-top:1px solid #e6e6e6;
+	text-align: center;
+	color:#999999;
+	font-size: 14px;
 }
 .delitel{
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
-	height: 50px;
+	margin: 0px;
+	height: 45px;
 	border-top:1px solid #e6e6e6;
 	font-size: 12px;
 	font-weight: bold;
@@ -251,8 +271,8 @@ body{
 	margin: 0px 30px 0px 30px;
 }
 .delitel_image{
-	height: 11px;
-	width: 11px;
+	height: 24px;
+	width: 24px;
 }
 /*фоточки подъехали*/
 .trio{
@@ -260,13 +280,12 @@ body{
 	flex-direction: row;
 	justify-content: space-between;
 	margin:	auto;
-	margin-bottom: 20px;
+	margin-bottom: 3px;
 	max-width: 950px;
 	max-height: 300px;
-	padding:0px 0px 0px 20px;
 }
 .trio_photo{
 	max-height: 300px;
 	max-width: 300px;
-	margin-right: 20px;
+	margin-right: 3px;
 }
