--- a/inst_small.css
+++ b/inst_small.css
@@ -237,11 +237,11 @@ body{
 	width: 56px;
 }
 .history_block{
-	display: inline-flex;
+	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 87px;
-	width: 75px;
+	min-height: 87px;
+	min-width: 75px;
 	font-size: 12px;
 	font-weight: normal;
 }
